--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ xcuserdata/
 timeline.xctimeline
 playground.xcworkspace
 
+# Pods
+Pods/
+
 # Swift Package Manager
 #
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
